[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/Product/EditButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/login.theme" type="Theme" id=2]
[ext_resource path="res://Scene/Product/ProductProperty.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.462745 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20

[sub_resource type="StyleBoxLine" id=2]
grow_begin = 0.0
grow_end = 0.0
vertical = true

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="ProductProperty" type="PanelContainer"]
margin_right = 164.0
margin_bottom = 53.0
rect_min_size = Vector2( 164, 53 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
prop_type = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 164.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_right = 149.0
margin_bottom = 53.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 17.0
margin_right = 54.0
margin_bottom = 36.0
rect_min_size = Vector2( 54, 19 )
text = "Name"
clip_text = true

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 53.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 20

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 74.0
margin_right = 139.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
align = 1
placeholder_text = "0"
caret_blink = true
caret_blink_speed = 0.5

[node name="EditButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 1 )]

[connection signal="focus_entered" from="MarginContainer/HBoxContainer/LineEdit" to="MarginContainer/HBoxContainer/LineEdit" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/LineEdit" to="." method="_on_Input_focus_exited"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EditButton" to="." method="_on_EditButton_pressed"]
